Initial implementation; removes approvalDate since it no longer tells the complete story of access; cleans up some test code; adds coverage for library card test.